chore(app): reduce warning